--- a/daw/entornoDesarrollo/eD_Cinco.html
+++ b/daw/entornoDesarrollo/eD_Cinco.html
@@ -20,6 +20,18 @@
         </header>
         <div class="contenedorApuntes">
             <h2 class="tituloTema" id="subUno">Tema 5. - Introducción al UML</h2>
+            <p>El lenguaje de modelado unificado (UML) es un lenguaje gráfico para visualizar, especificar y documentar cada una de las partes que comprende el desarrollo de software. Este lenguaje se puede utilizar para modelar sistemas de software, hardware u organizaciones en un entorno real. Para ello utiliza una serie de diagramas en los que se representan distintos puntos de vista de modelado. Podemos decir que UML es un lenguaje que se utiliza para documentar.</p>
+            <p>Existen dos versiones</p>
+            <ul>
+                <li>UML 1.x: desde finales de los noventa se empezó a trabajar con el estándar UML. En los años sucesivos fueron apareciendo nuevas versiones que introducían mejoras o ampliaban a las anteriores</li>
+                <li>UML 2.x: en torno a 2005 se difundió una nueva versión de UML</li>
+            </ul>
+            <p>UML 2.0 define 13 tipos de diagramas, divididos en 2 categorías: 6 tipos de diagramas representan la estructura estática de la aplicación o del sistema y 4 tipos de diagramas representan el comportamiento del sistema:</p>
+            <ul>
+                <li><b>Diagramas de estructura (parte estática del modelo):</b> incluyen el diagrama de clases, diagrama de objetos, diagrama de componentes, diagrama de estructura compuesta, diagrama de paquetes y diagrama de implementación o despliegue</li>
+                <li><b>Diagramas de comportamiento (parte dinámica del modelo):</b> incluyen el diagrama de casos de uso, diagrama de actividad, diagramas de interacción y diagramas de máquinas de estado</li>
+                <li><b>Diagramas de interacción:</b> son diagramas de comportamiento que incluyen diagramas como el diagrama de secuencia, diagrama de comunicación, diagrama de tiempos y diagrama de vista de interacción. Se centran en el flujo de control y de datos entre los elementos del sistema modelado</li>
+            </ul>
             
             <!--*********************************************************************-->
         </div><!-- Fin contenedorApuntes -->
