--- a/daw/dAw.html
+++ b/daw/dAw.html
@@ -15,7 +15,7 @@
     <main class="main--Principal">
       <header>
         <div class="navegacion">
-          <button id="inicio"><a href="index.html">Inicio</a></button>
+          <button id="inicio"><a href="../index.html">Inicio</a></button>
           <button id="daw"><a href="dAw.html">dAw</a></button>
           <button id="devA"><a href="devA.html">devA</a></button>
           <button id="proyectos"><a href="proyectos.html">Proyectos</a></button>
@@ -25,114 +25,114 @@
         </div>
       </header>
       <!----------------------------------------->
-      <section class="daw"> <!-- Eliminar y fusionar con main-Principal -->
-          <div class="card">
-            <div class="cardTitulo"><h3>Sistemas Informáticos</h3></div>
-            <div class="cardTema"><a href="./sistemas/sistemasUno.html">1. Instalación software libre y propietario</a></div>
-            <div class="cardTema"><a href="./sistemas/sistemasDos.html">2. Administración de software base</a></div>
-            <div class="cardTema"><a href="./sistemas/sistemasTres.html">3. Administración de la información</a></div>
-            <div class="cardTema"><a href="./sistemas/sistemasCuatro.html">4. Administración de dominios</a></div>
-            <div class="cardTema"><a href="./sistemas/sistemasCinco.html">5. Administración del acceso al dominio</a></div>
-            <div class="cardTema"><a href="./sistemas/sistemasSeis.html">6. Resolución de incidencias y asistencia técnica</a></div>
-          </div>
+      <section class="contenedorDaw">
+        <div class="card">
+          <div class="cardTitulo"><h3>Sistemas Informáticos</h3></div>
+          <div class="cardTema"><a href="./sistemas/sistemasUno.html">1. Instalación software libre y propietario</a></div>
+          <div class="cardTema"><a href="./sistemas/sistemasDos.html">2. Administración de software base</a></div>
+          <div class="cardTema"><a href="./sistemas/sistemasTres.html">3. Administración de la información</a></div>
+          <div class="cardTema"><a href="./sistemas/sistemasCuatro.html">4. Administración de dominios</a></div>
+          <div class="cardTema"><a href="./sistemas/sistemasCinco.html">5. Administración del acceso al dominio</a></div>
+          <div class="cardTema"><a href="./sistemas/sistemasSeis.html">6. Resolución de incidencias y asistencia técnica</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card">
-            <div class="cardTitulo"><h3>Programación I</h3></div>
-            <div class="cardTema"><a href="./proUno/proUno.html">1. Introducción a la programación</a></div>
-            <div class="cardTema"><a href="./proUno/proDos.html">2. Estructura de un programa informático</a></div>
-            <div class="cardTema"><a href="./proUno/proTres.html">3. Programación Estructurada</a></div>
-            <div class="cardTema"><a href="./proUno/proCuatro.html">4. Programación Modular</a></div>
-            <div class="cardTema"><a href="./proUno/proCinco.html">5. Gestión de ficheros</a></div>
-          </div>
+        <div class="card">
+          <div class="cardTitulo"><h3>Programación I</h3></div>
+          <div class="cardTema"><a href="./proUno/proUno.html">1. Introducción a la programación</a></div>
+          <div class="cardTema"><a href="./proUno/proDos.html">2. Estructura de un programa informático</a></div>
+          <div class="cardTema"><a href="./proUno/proTres.html">3. Programación Estructurada</a></div>
+          <div class="cardTema"><a href="./proUno/proCuatro.html">4. Programación Modular</a></div>
+          <div class="cardTema"><a href="./proUno/proCinco.html">5. Gestión de ficheros</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card">
-            <div class="cardTitulo"><h3>Programación II</h3></div>
-            <div class="cardTema"><a href="./proDos/proDosSeis.html">6. POO - Fundamentos</a></div>
-            <div class="cardTema"><a href="./proDos/proDosSiete.html">7. Desarrollo de programas orientados en clases</a></div>
-            <div class="cardTema"><a href="./proDos/proDosOcho.html">8. Utilización avanzada de clases en el diseño de aplicaciones</a></div>
-            <div class="cardTema"><a href="./proDos/proDosNueve.html">9. Aplicación de estructuras de almacenamiento en la Portfolio</a></div>
-            <div class="cardTema"><a href="./proDos/proDosDiez.html">10. Control de excepciones</a></div>
-            <div class="cardTema"><a href="./proDos/proDosOnce.html">11. Lectura y escritura de información</a></div>
-            <div class="cardTema"><a href="./proDos/proDosDoce.html">12. Interface gráfica de usuario</a></div>
-            <div class="cardTema"><a href="./proDos/proDosTrece.html">13. Diseño de programas con lenguajes POO para gestionar bases de datos relacionales</a></div>
-            <div class="cardTema"><a href="./proDos/proDosCatorce.html">14. Diseño de programas con lenguajes POO para gestionar bases de datos objeto-relacionales</a></div>
-            <div class="cardTema"><a href="./proDos/proDosQuince.html">15. Diseño de programas con lenguajes POO para gestionar bases de datos orientadas a objetos</a></div>
-          </div>
+        <div class="card">
+          <div class="cardTitulo"><h3>Programación II</h3></div>
+          <div class="cardTema"><a href="./proDos/proDosSeis.html">6. POO - Fundamentos</a></div>
+          <div class="cardTema"><a href="./proDos/proDosSiete.html">7. Desarrollo de programas orientados en clases</a></div>
+          <div class="cardTema"><a href="./proDos/proDosOcho.html">8. Utilización avanzada de clases en el diseño de aplicaciones</a></div>
+          <div class="cardTema"><a href="./proDos/proDosNueve.html">9. Aplicación de estructuras de almacenamiento en la Portfolio</a></div>
+          <div class="cardTema"><a href="./proDos/proDosDiez.html">10. Control de excepciones</a></div>
+          <div class="cardTema"><a href="./proDos/proDosOnce.html">11. Lectura y escritura de información</a></div>
+          <div class="cardTema"><a href="./proDos/proDosDoce.html">12. Interface gráfica de usuario</a></div>
+          <div class="cardTema"><a href="./proDos/proDosTrece.html">13. Diseño de programas con lenguajes POO para gestionar bases de datos relacionales</a></div>
+          <div class="cardTema"><a href="./proDos/proDosCatorce.html">14. Diseño de programas con lenguajes POO para gestionar bases de datos objeto-relacionales</a></div>
+          <div class="cardTema"><a href="./proDos/proDosQuince.html">15. Diseño de programas con lenguajes POO para gestionar bases de datos orientadas a objetos</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card">
-            <div class="cardTitulo"><h3>Bases de Datos I</h3></div>
-            <div class="cardTema"><a href="./bdUno/bdUnoUno.html">1. Introducción a las bases de Datos</a></div>
-            <div class="cardTema"><a href="./bdUno/bdUnoDos.html">2. Modelo entidad-relación</a></div>
-            <div class="cardTema"><a href="./bdUno/bdUnoTres.html">3. Modelo relacional</a></div>
-            <div class="cardTema"><a href="./bdUno/bdUnoCuatro.html">4. Normalización</a></div>
-            <div class="cardTema"><a href="./bdUno/bdUnoCinco.html">5. Lenguajes de las BBDD SQL</a></div>
-            <div class="cardTema"><a href="./bdUno/bdUnoSeis.html">6. Estrategias para el control de las transacciones y de la concurrencia</a></div>
-            <div class="cardTema"><a href="./bdUno/bdUnoSiete.html">7. Lenguajes de las BBDD para la creación d esu estructura</a></div>
-          </div>
+        <div class="card">
+          <div class="cardTitulo"><h3>Bases de Datos I</h3></div>
+          <div class="cardTema"><a href="./bdUno/bdUnoUno.html">1. Introducción a las bases de Datos</a></div>
+          <div class="cardTema"><a href="./bdUno/bdUnoDos.html">2. Modelo entidad-relación</a></div>
+          <div class="cardTema"><a href="./bdUno/bdUnoTres.html">3. Modelo relacional</a></div>
+          <div class="cardTema"><a href="./bdUno/bdUnoCuatro.html">4. Normalización</a></div>
+          <div class="cardTema"><a href="./bdUno/bdUnoCinco.html">5. Lenguajes de las BBDD SQL</a></div>
+          <div class="cardTema"><a href="./bdUno/bdUnoSeis.html">6. Estrategias para el control de las transacciones y de la concurrencia</a></div>
+          <div class="cardTema"><a href="./bdUno/bdUnoSiete.html">7. Lenguajes de las BBDD para la creación d esu estructura</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card">
-            <div class="cardTitulo"><h3>Lenguajes de Marcas</h3></div>
-            <div class="cardTema"><a href="./Len_Marcas/lenMarUno.html">1. Reconocimiento de las características de los lenguajes de marcas</a></div>
-            <div class="cardTema"><a href="./Len_Marcas/lenMarDos.html">2. Utilización de lenguajes de marcas en entornos web</a></div>
-            <div class="cardTema"><a href="./Len_Marcas/lenMarTres.html">3. Definición de esquemas y vocabularios de XML</a></div>
-            <div class="cardTema"><a href="./Len_Marcas/lenMarCuatro.html">4. Aplicación de los lenguajes de marcas a la sindicación de contenidos</a></div>
-            <div class="cardTema"><a href="./Len_Marcas/lenMarCinco.html">5. Conversión y adaptación de documentos XML</a></div>
-            <div class="cardTema"><a href="./Len_Marcas/lenMarSeis.html">6. Gestión y almacenamiento de información de XML</a></div>
-            <div class="cardTema"><a href="./Len_Marcas/lenMarSiete.html">7. Sistemas de gestión empresarial</a></div>
-          </div>
+        <div class="card">
+          <div class="cardTitulo"><h3>Lenguajes de Marcas</h3></div>
+          <div class="cardTema"><a href="./Len_Marcas/lenMarUno.html">1. Reconocimiento de las características de los lenguajes de marcas</a></div>
+          <div class="cardTema"><a href="./Len_Marcas/lenMarDos.html">2. Utilización de lenguajes de marcas en entornos web</a></div>
+          <div class="cardTema"><a href="./Len_Marcas/lenMarTres.html">3. Definición de esquemas y vocabularios de XML</a></div>
+          <div class="cardTema"><a href="./Len_Marcas/lenMarCuatro.html">4. Aplicación de los lenguajes de marcas a la sindicación de contenidos</a></div>
+          <div class="cardTema"><a href="./Len_Marcas/lenMarCinco.html">5. Conversión y adaptación de documentos XML</a></div>
+          <div class="cardTema"><a href="./Len_Marcas/lenMarSeis.html">6. Gestión y almacenamiento de información de XML</a></div>
+          <div class="cardTema"><a href="./Len_Marcas/lenMarSiete.html">7. Sistemas de gestión empresarial</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card">
-            <div class="cardTitulo"><h3>Entornos de Desarrollo</h3></div>
-            <div class="cardTema"><a href="./entornoDesarrollo/eD_Uno.html">1. Desarrollo de software</a></div>
-            <div class="cardTema"><a href="./entornoDesarrollo/eD_Dos.html">2. Instalación y uso de entornos de desarrollo</a></div>
-            <div class="cardTema"><a href="./entornoDesarrollo/eD_Tres.html">3. Diseño y realización de pruebas</a></div>
-            <div class="cardTema"><a href="./entornoDesarrollo/eD_Cuatro.html">4. Documentación y optimización</a></div>
-            <div class="cardTema"><a href="./entornoDesarrollo/eD_Cinco.html">5. Introducción al UML</a></div>
-            <div class="cardTema"><a href="./entornoDesarrollo/eD_Seis.html">6. Elaboración de diagramas de clases</a></div>
-            <div class="cardTema"><a href="./entornoDesarrollo/eD_Siete.html">7. Elaboración de diagramas de comportamiento</a></div>
-          </div>
+        <div class="card">
+          <div class="cardTitulo"><h3>Entornos de Desarrollo</h3></div>
+          <div class="cardTema"><a href="./entornoDesarrollo/eD_Uno.html">1. Desarrollo de software</a></div>
+          <div class="cardTema"><a href="./entornoDesarrollo/eD_Dos.html">2. Instalación y uso de entornos de desarrollo</a></div>
+          <div class="cardTema"><a href="./entornoDesarrollo/eD_Tres.html">3. Diseño y realización de pruebas</a></div>
+          <div class="cardTema"><a href="./entornoDesarrollo/eD_Cuatro.html">4. Documentación y optimización</a></div>
+          <div class="cardTema"><a href="./entornoDesarrollo/eD_Cinco.html">5. Introducción al UML</a></div>
+          <div class="cardTema"><a href="./entornoDesarrollo/eD_Seis.html">6. Elaboración de diagramas de clases</a></div>
+          <div class="cardTema"><a href="./entornoDesarrollo/eD_Siete.html">7. Elaboración de diagramas de comportamiento</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card">
-            <div class="cardTitulo"><h3>Desarrollo web en Entorno Cliente</h3></div>
-            <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Uno.html">1. Selección de arquitecturas y de herramientas de programación</a></div>
-            <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Dos.html">2. Aplicación y verificación de la sintaxis del lenguaje</a></div>
-            <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Tres.html">3. Identificación y aplicación de los objetos predefinidos del lenguaje</a></div>
-            <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Cuatro.html">4. Programación  con arrays, funciones y objetos definidos por el usuario</a></div>
-            <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Cinco.html">5. Integración al código de la gestión de eventos y formularios</a></div>
-            <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Seis.html">6. Análisis y aplicación del modelo de objetos del documento DOM</a></div>
-            <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Siete.html">7. Reconocimiento y aplicación de mecanismos de comunicación asíncrona</a></div>
-          </div>
+        <div class="card">
+          <div class="cardTitulo"><h3>Desarrollo web en Entorno Cliente</h3></div>
+          <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Uno.html">1. Selección de arquitecturas y de herramientas de programación</a></div>
+          <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Dos.html">2. Aplicación y verificación de la sintaxis del lenguaje</a></div>
+          <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Tres.html">3. Identificación y aplicación de los objetos predefinidos del lenguaje</a></div>
+          <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Cuatro.html">4. Programación  con arrays, funciones y objetos definidos por el usuario</a></div>
+          <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Cinco.html">5. Integración al código de la gestión de eventos y formularios</a></div>
+          <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Seis.html">6. Análisis y aplicación del modelo de objetos del documento DOM</a></div>
+          <div class="cardTema"><a href="./dwEntornoCliente/dwEC_Siete.html">7. Reconocimiento y aplicación de mecanismos de comunicación asíncrona</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card">
-            <div class="cardTitulo"><h3>Formación y Orientación Laboral</h3></div>
-            <div class="cardTema"><a href="./fol/fol_Uno.html">1. Búsqueda activa de ocupación</a></div>
-            <div class="cardTema"><a href="./fol/fol_Dos.html">2. Equipos de trabajo y gestión del conflicto</a></div>
-            <div class="cardTema"><a href="./fol/fol_Tres.html">3. Relaciones laborales</a></div>
-            <div class="cardTema"><a href="./fol/fol_Cuatro.html">4. Prestaciones sociales</a></div>
-            <div class="cardTema"><a href="./fol/fol_Cinco.html">5. Evaluación de riesgos profesionales</a></div>
-            <div class="cardTema"><a href="./fol/fol_Seis.html">6. Planificación de la prevención de riesgos de la empresa</a></div>
-            <div class="cardTema"><a href="./fol/fol_Siete.html">7. Aplicación de medidas de prevención y protección en la empresa</a></div>
-          </div>
+        <div class="card">
+          <div class="cardTitulo"><h3>Formación y Orientación Laboral</h3></div>
+          <div class="cardTema"><a href="./fol/fol_Uno.html">1. Búsqueda activa de ocupación</a></div>
+          <div class="cardTema"><a href="./fol/fol_Dos.html">2. Equipos de trabajo y gestión del conflicto</a></div>
+          <div class="cardTema"><a href="./fol/fol_Tres.html">3. Relaciones laborales</a></div>
+          <div class="cardTema"><a href="./fol/fol_Cuatro.html">4. Prestaciones sociales</a></div>
+          <div class="cardTema"><a href="./fol/fol_Cinco.html">5. Evaluación de riesgos profesionales</a></div>
+          <div class="cardTema"><a href="./fol/fol_Seis.html">6. Planificación de la prevención de riesgos de la empresa</a></div>
+          <div class="cardTema"><a href="./fol/fol_Siete.html">7. Aplicación de medidas de prevención y protección en la empresa</a></div>
+        </div>
         <!----------------------------------------->
-          <div class="card inactiva">
-            <div class="cardTitulo"><h3>Desarrollo web en Entorno Servidor</h3></div>
-          </div>
+        <div class="card inactiva">
+          <div class="cardTitulo"><h3>Desarrollo web en Entorno Servidor</h3></div>
+        </div>
         <!----------------------------------------->
-          <div class="card inactiva">
-            <div class="cardTitulo"><h3>Despliegue de Aplicaciones Web</h3></div>
-          </div>
+        <div class="card inactiva">
+          <div class="cardTitulo"><h3>Despliegue de Aplicaciones Web</h3></div>
+        </div>
         <!----------------------------------------->
-          <div class="card inactiva">
-            <div class="cardTitulo"><h3>Diseño de Interfaces Web</h3></div>
-          </div>
+        <div class="card inactiva">
+          <div class="cardTitulo"><h3>Diseño de Interfaces Web</h3></div>
+        </div>
         <!----------------------------------------->
-          <div class="card inactiva">
-            <div class="cardTitulo"><h3>Empresa e iniciativa Emprendedora</h3></div>
-          </div>
+        <div class="card inactiva">
+          <div class="cardTitulo"><h3>Empresa e iniciativa Emprendedora</h3></div>
+        </div>
         <!----------------------------------------->
-          <div class="card inactiva">
-            <div class="cardTitulo"><h3>Proyecto de Desarrollo de aplicaciones web</h3></div>
-          </div>
+        <div class="card inactiva">
+          <div class="cardTitulo"><h3>Proyecto de Desarrollo de aplicaciones web</h3></div>
+        </div>
         <!----------------------------------------->
       </section>
     </main>
