--- a/daw/fol/fol_Siete.html
+++ b/daw/fol/fol_Siete.html
@@ -218,9 +218,32 @@
                 <li><b>Buscar atención médica inmediata.</b></li>
             </ul>
             <h4 class="apartado">7.4.3. Hemorragias</h4>
-            pág 175
-
-
+            <p>Una <b>hemorragia</b> es la salida de sangre de un vaso sanguíneo. Si la sangre sale a través de una herida en la piel, se trata de una <b>hemorragia externa</b>. Si se vierte hacia el interior, la <b>hemorragia es interna</b>. Si sale a través de un orificio natural, se trata de una <b>hemorragia interna exteriorizada</b>.</p>
+            <p>Para detener una hemorragia, debemos realizar compresión directa sobre la herida, en caso de que esto fallara, se debe realizar compresión arterial. Para hacer la compresión directa, comprimiremos la herida con un trapo o tela limpia. Se tapa la herida que sangra con los dedos o la palma de la mano, según la extensión de la herida.</p>
+            <p>Fijamos el trapo, tela  o gasa con unas vueltas de venda aplicadas con fuerza, pero sin oprimir demasiado para no impedir la circulación.</p>
+            <p>Si no sirve, podemos intentar la compresión arterial. Se comprime la asteria cercana a la lesión sobre hueso con el fin de reducir el aporte sanguíneo a la zona. Existen varios puntos donde podemos realizar la compresión arterial:</p>
+            <ul>
+                <li>Si se produce en los brazos, ejerceremos presión sobre la arteria humeral presionando con los dedos índice y medio a nivel del bíceps</li>
+                <li>Si está en las piernas, se presionará la arteria femoral, ejerciendo presión con el puño en la ingle</li>
+                <li>Otras arterias son: la carótida en el cuello, la subclavia en la clavícula, la axilar en la axila, la poplítea en el huevo poplíteo (detrás de la rodilla), la temporal en los lados de la cabeza, y la cúbito-radial en las muñecas</li>
+            </ul>
+            <p>El uso de <b>torniquetes</b> tan solo debe emplearse cuando la vida de la persona corre peligro inminente y no podemos parar el sangrado con las técnicas anteriores.</p>
+            <p>Hay que tener en cuenta que existe un alto riesgo de necrosis. Su uso se considera como la última medida.</p>
+            <h4 class="apartado">Traumatismos</h4>
+            <p>Un <b>traumatismo</b> es una lesión causada en el organismo por un impacto violento. Suelen ocurrir con relativa frecuencia y afectan a los huesos, articulaciones y músculos. Dependiendo de la afectación, los traumatismos se clasifican en fracturas, esguinces, luxaciones y contusiones.</p>
+            <p>Una <b>fractura</b> es la pérdida de continuidad de un hueso. Abierta (se produce una herida en la piel dejando al descubierto el hueso) o cerrada (la piel se mantiene intacta).</p>
+            <p>No debemos mover a la víctima si no exite un riesgo vital.</p>
+            <p>Si es abierta, cubrimos la herida con apósitos estériles o compresas. No intentar detenerla comprimiendo o elevando el miembro lesionado, ya que podemos agravar la lesión.</p>
+            <p>Un <b>esgince</b> es una lesión en los ligamentos, los tejidos que conectan los huesos entre sí. Sus signos y síntomas incluyen el enrojecimiento, hematoma, calor, hinchazón, dolor intenso y dificultad de movimientos.</p>
+            <p>Una <b>luxación</b> es la separación total o completa de dos superficies articulares. Los huesos quedan fuera de su sitio y los ligamentos también se ven afetados, por lo que es necesario inmovilizar a la víctima y valorar su estado, inmovilizar la articulación luxada, e incluso aplicar frío local sobre la zona dañada.</p>
+            <p>Una <b>contusión</b> es una inflamación de la piel, pero sin lesión externa. La <b>leve</b>, donde tan solo hay que poner hielo para bajar la inflamación, y la <b>grave</b>, cuando existen lesiones en tendones, músculos y nervios, y en esots casos debemos aplicar frío, inmovilizar la zona con un vendaje y elevar la extremidad si hay edema.</p>
+            <p>Con personas que presentan un cuerpo extraño en las vías aéreas, por lo que también es interesante conocer el procedimiento de la maniobre de Heimlich.</p>
+            <p>Para realizarla, se debe ejercer una fuerte compresión abdominal que hará que aumente la presión del tórax.</p>
+            <ul>
+                <li>Ponerse detrás de la víctima y colocar los brazos en torno a su cintura</li>
+                <li>Cerrar el puño de una mano, colocando el pulgar contra el abdomen de la persona por encima del ombligo. Este puño se agarra con la otra mano y se realizan compresiones contra el abdomen de la víctima rápidamente y empujando hacia arriba y hacia adentro a la vez.</li>
+                <li>Se repetirán las compresiones hasta que el cuerpo extraño sea expulsado o hasta que la víctima pierda la consciencia. En este caso, pasaríamos a realizar la reanimación cardiopulmonar.</li>
+            </ul>
             <div class="menuOpcional">
                 <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
